--- a/SeaBattle.Common/SeaBattle.Contracts.csproj
+++ b/SeaBattle.Common/SeaBattle.Contracts.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Service\ISeaBattleService.cs" />
     <Compile Include="Interfaces\IShip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session\GameDescription.cs" />
+    <Compile Include="Session\GameLevel.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
