--- a/SeaBattleServer/SeaBattleServer.csproj
+++ b/SeaBattleServer/SeaBattleServer.csproj
@@ -58,6 +58,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session\SeaBattleGameComponent.cs" />
+    <Compile Include="Session\ServerGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ShipSupplies\" />
