--- a/SeaBattle.Objects/SeaBattle.Service.csproj
+++ b/SeaBattle.Objects/SeaBattle.Service.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{915E039D-C7B4-4F7D-A4E2-9CECE6DDBA08}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SeaBattle.Objects</RootNamespace>
-    <AssemblyName>SeaBattle.Objects</AssemblyName>
+    <RootNamespace>SeaBattle.Service</RootNamespace>
+    <AssemblyName>SeaBattle.Service</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -50,6 +50,7 @@
     <Reference Include="Microsoft.Xna.Framework.Xact, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,6 +61,9 @@
     <Compile Include="ErrorHelper\ErrorHelper.cs" />
     <Compile Include="Player\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeaBattleService.cs" />
+    <Compile Include="Session\GameSession.cs" />
+    <Compile Include="Session\SessionManager.cs" />
     <Compile Include="ShipSupplies\Cannons.cs" />
     <Compile Include="ShipSupplies\Compass.cs" />
     <Compile Include="ShipSupplies\Sails.cs" />
@@ -70,7 +74,6 @@
     <Compile Include="Ships\ShipBase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Session\" />
     <Folder Include="StaticObjects\" />
   </ItemGroup>
   <ItemGroup>
