SeaBattle-MakeConnection Добавил реализацию методов сериализации

--- a/SeaBattle.Objects/SeaBattle.Service.csproj
+++ b/SeaBattle.Objects/SeaBattle.Service.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ShipSupplies\Cannons.cs" />
     <Compile Include="ShipSupplies\Compass.cs" />
     <Compile Include="ShipSupplies\Sails.cs" />
+    <Compile Include="ShipSupplies\ShipCrew.cs" />
     <Compile Include="ShipSupplies\ShipHold.cs" />
     <Compile Include="ShipSupplies\Supplies.cs" />
     <Compile Include="ShipSupplies\WindVane.cs" />
