SeaBattle-MakeConnection Определил все методы сериализации

--- a/SeaBattle.Common/SeaBattle.Common.csproj
+++ b/SeaBattle.Common/SeaBattle.Common.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Session\GameDescription.cs" />
     <Compile Include="Session\GameLevel.cs" />
     <Compile Include="Utils\CommonSerializer.cs" />
+    <Compile Include="Utils\Converter.cs" />
     <Compile Include="Utils\TimeHelper.cs" />
   </ItemGroup>
   <ItemGroup />
