SeaBattle Установил соединение между клиентом и сервером

--- a/SeaBattle/SeaBattle/SeaBattle.csproj
+++ b/SeaBattle/SeaBattle/SeaBattle.csproj
@@ -93,6 +93,7 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
@@ -162,6 +163,9 @@
   <ItemGroup>
     <Folder Include="ShipSupplies\" />
     <Folder Include="StaticObjects\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
