--- a/SeaBattle/SeaBattle/App.config
+++ b/SeaBattle/SeaBattle/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="SeaBattle.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <system.serviceModel>
     <bindings>
       <netTcpBinding>
@@ -17,4 +22,26 @@
         name="SeaBattleEndpoint" />
     </client>
   </system.serviceModel>
+  <userSettings>
+    <SeaBattle.Settings>
+      <setting name="login" serializeAs="String">
+        <value>admin</value>
+      </setting>
+      <setting name="password" serializeAs="String">
+        <value>231456987</value>
+      </setting>
+      <setting name="Cursor" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="KeyboardLayout" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="FullScreenSelected" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Volume" serializeAs="String">
+        <value>1</value>
+      </setting>
+    </SeaBattle.Settings>
+  </userSettings>
 </configuration>
