--- a/SeaBattle/SeaBattle/SeaBattle.csproj
+++ b/SeaBattle/SeaBattle/SeaBattle.csproj
@@ -115,11 +115,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Game\GameController.cs" />
     <Compile Include="Input\Controller.cs" />
+    <Compile Include="Input\InputControll.cs" />
     <Compile Include="Input\KeyboardAndMouse.cs" />
     <Compile Include="NetWork\ConnectionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Screens\LoginScreen.cs" />
+    <Compile Include="Screens\MainMenuScreen.cs" />
+    <Compile Include="Screens\MessageBox.cs" />
+    <Compile Include="Screens\NewAccountScreen.cs" />
+    <Compile Include="Screens\OptionsMenuScreen.cs" />
     <Compile Include="SeaBattleGame.cs" />
     <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Screens\ScreenManager.cs" />
@@ -130,6 +137,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Utils\HashHelper.cs" />
+    <Compile Include="View\Textures.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
