--- a/SeaBattleServer/app.config
+++ b/SeaBattleServer/app.config
@@ -5,6 +5,7 @@
             <section name="SeaBattleServer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <connectionStrings />
     <applicationSettings>
         <SeaBattleServer.Properties.Settings>
             <setting name="port" serializeAs="String">
