--- a/SeaBattle.Objects/SeaBattle.Service.csproj
+++ b/SeaBattle.Objects/SeaBattle.Service.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollizionDetector.cs" />
     <Compile Include="DA\DataBaseAdapter.cs" />
     <Compile Include="ErrorHelper\ErrorHelper.cs" />
     <Compile Include="Goods\Good.cs" />
