--- a/SeaBattle.Common/SeaBattle.Common.csproj
+++ b/SeaBattle.Common/SeaBattle.Common.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Session\GameLevel.cs" />
     <Compile Include="Utils\CommonSerializer.cs" />
     <Compile Include="Utils\Converter.cs" />
+    <Compile Include="Utils\GarbageCollector.cs" />
     <Compile Include="Utils\TimeHelper.cs" />
   </ItemGroup>
   <ItemGroup>
